--- a/web/app/user/sass/components/_thumbnail.scss
+++ b/web/app/user/sass/components/_thumbnail.scss
@@ -55,6 +55,7 @@
 
       .categoryName{
         color: $light-grey;
+        vertical-align: bottom;
         
       }
     }
